ola-parser/src/testdata/syntaxTests/parsing/mapping_nonelementary_key_1.sol
contract c {
	mapping(u256[] => u256) data;
}
// ----
// ParserError 2314: (26-27): Expected '=>' but got '['
